--- a/LRevision.ipynb
+++ b/LRevision.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 214,
-   "id": "d8e0c55f",
+   "execution_count": 219,
+   "id": "21105a3b",
    "metadata": {},
    "outputs": [
     {
@@ -12,14 +12,16 @@
        "l_revision (generic function with 1 method)"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "using LogicCircuits\n",
+    "\n",
     "function l_revision(circuit)\n",
-    "    VERBOSE = true\n",
+    "    VERBOSE = false\n",
     "    circuit = PlainLogicCircuit(circuit)\n",
     "    root = circuit\n",
     "    current = circuit\n",
@@ -92,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "2ad95644",
+   "id": "a296430c",
    "metadata": {},
    "outputs": [
     {
@@ -218,14 +220,22 @@
     }
    ],
    "source": [
-    "using LogicCircuits\n",
     "sun, rain, rainbow = pos_literals(LogicCircuit, 3)\n",
     "circuit = (rainbow & sun & rain) | (-rainbow); # rainbow implies sun and rain\n",
     "manager = SddMgr(7, :balanced)\n",
     "#:rightlinear, :leftlinear, :random, :balanced\n",
     "circuit2 = compile(manager, circuit);\n",
-    "plot(l_revision(circuit2))\n",
     "plot(circuit2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d50b2598",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot(l_revision(circuit2))"
    ]
   }
  ],
